--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <script type="module" src="./index.ts"></script>
+
+    <script type="text/ruby">
+      puts 'Hello, world!'
+    </script>
   </body>
 </html>
